Fixed an issue with the positioning of the collapse icon on the ribon. The icon needed to move 1 pixel upward.

--- a/Resources/Stylesheets/OfficeUI.css
+++ b/Resources/Stylesheets/OfficeUI.css
@@ -294,7 +294,7 @@
   position: absolute;
   bottom: 0;
   height: 17px;
-  padding-bottom: 1px;
+  padding-bottom: 2px;
   right: 0;
   width: 29px;
 }
